@@ -13,6 +13,10 @@ See the end for copying conditions.
 ** libgnutls: Introduced a function group to set known DH parameters
    using groups from RFC7919.
 
+** libgnutls: Introduced time and constraints checks in the end certificate
+   in the gnutls_x509_crt_verify_data2() and gnutls_pkcs7_verify_direct()
+   functions.
+
 ** certtool: --get-dh-params will output parameters from the RFC7919
    groups.
 
